Category changes: -User, -Ideas, +{{Wishlist}}

--- a/MiLF_interface.mw
+++ b/MiLF_interface.mw
@@ -1,3 +1,5 @@
+{{Wishlist}}
+
 == MiLF (Most Likely First) Interface ==
 
 It seems to me that having the numeric keypad as the "front page" on a touch screen smartphone is just a hang-over from fixed keypad phones.  I personally wouldn't use the keypad to dial anyone other than the emergency services, I don't even know my own mobile number never mind anyone else's.
@@ -7,5 +9,3 @@ If you pick up your phone and nothing is happening (no incoming call or message,
 If you hit the "Call" or "SMS" buttons you should be presented with a list of the people you are most likely trying to call or text and then one more button to open your whole contacts list.  You could also include a button to take you to a conventional keypad. The "most likely" list would be made up of the top 4 or 5 phones you call or text most often (gathered from call/sms history) plus the person who called/messaged you last if they are not in the top 4. On pressing on a contact number an optional confirmation screen would say "Call - ''Contact_Name'' on ''Number''" with big "tick" and "cross" buttons.
 
 This means that for most of your calls you will tap "Call->Contact's number->Yes"  rather than  "Menu->Phonebook->(lots of scrolling)->Contact->Number->Call->Yes"
-[[Category:User]]
-[[Category:Ideas| ]]
