--- a/Introduction%2Fcs.mw
+++ b/Introduction%2Fcs.mw
@@ -43,5 +43,4 @@ Mrkněte také na [[Wishlist:Neo1973 P0 Review | P0 recenzi]].
 
 {{Languages|Introduction}}
 
-[[Category:Information| ]]
-[[Category:User| ]]
+[[Category:Openmoko Inc]]
