Category changes: -User, -Information, +Openmoko Inc

--- a/Introduction%2Fnl.mw
+++ b/Introduction%2Fnl.mw
@@ -44,5 +44,4 @@ Zie ook [[Wishlist:Neo1973 P0 Review]]
 
 {{Languages|Introduction}}
 
-[[Category:Information| ]]
-[[Category:User| ]]
+[[Category:Openmoko Inc]]
