Category changes: -User, -Information, +Openmoko Inc

--- a/Introduction%2Ffr.mw
+++ b/Introduction%2Ffr.mw
@@ -1,4 +1,3 @@
-
 {{Introbox}}
 
 Openmoko est en train de créer le premier framework au monde complétement libre pour téléphone portable.
@@ -50,5 +49,4 @@ Voir aussi [[Wishlist:Neo1973 P0 Review]]
 
 {{Languages|Introduction}}
 
-[[Category:Information| ]]
-[[Category:User| ]]
+[[Category:Openmoko Inc]]
