/* Set up your local.conf */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -20,6 +20,12 @@ Before ''make image'', you might want to update ''conf/local.conf'' (under ''shr
  PARALLEL_MAKE = "-j 4"
  BB_NUMBER_THREADS = "4"
 
+To avoid multiple local generation, add:
+
+ GLIBC_GENERATE_LOCALES = "en_US.UTF-8"
+
+this will also speed up the whole build.
+
 === Making changes ===
 
 Make changes to an SHR project (e.g. openmoko-dialer3, under the SHR root directory), then under the top directory:
