/* Set up your local.conf */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -20,7 +20,7 @@ Before ''make image'', you might want to update ''conf/local.conf'' (under ''shr
  PARALLEL_MAKE = "-j 4"
  BB_NUMBER_THREADS = "4"
 
-To avoid multiple local generation, add:
+To avoid multiple locales generation, add:
 
  GLIBC_GENERATE_LOCALES = "en_US.UTF-8"
 
