Category changes: -Techical, +Battery, -Documentation

--- a/Forcing_fast_charge_mode.mw
+++ b/Forcing_fast_charge_mode.mw
@@ -47,5 +47,4 @@ To enable fast 500 mA charge "touch /home/root/allow_force_500"
 
 To enable fast 1000 mA charge "touch /home/root/allow_force_1000" I don't recommend using this one 
 
-[[Category:Technical  ]]
-[[Category:Documentation]]
+[[Category:Battery]]
