--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -6,7 +6,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 === First build ===
 
 * Download the FSO ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
-* Change this line in common/setup-env:
+* Change this line in ''common/setup-env'':
 
  export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
 
