/* New way (using FSO Makefile) */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -1,11 +1,11 @@
 {{SHR}}
-= New way (using FSO Makefile) =
+= New way (using FSO/SHR Makefile) =
 
 There is a new (much simpler) way to build SHR that is under construction right now.
 
 === First build ===
 
-* Download the FSO ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
+* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details).
 * Change this line in ''common/setup-env'':
 
  export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
