--- a/Usability_Team%2FUser_Categories.mw
+++ b/Usability_Team%2FUser_Categories.mw
@@ -12,4 +12,6 @@
 * The Hacker
 ** These users tend to care more about customization.  They want to be able to make changes to every aspect of the phone.
 
+== See also ==
+* [[Personas]]
 [[Category:Community]]
