--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -168,6 +168,7 @@ http://opensource.wolfsonmicro.com/~gg/bluetooth-pcm/bluetooth_pcm.c
 ===== asound.state =====
 
 http://opensource.wolfsonmicro.com/~gg/neo1973/gsmbluetooth.state
+NOTE this will not work with GTA02, as the control numbers have changed
 
 === Bluetooth headset with system audio ===
 
