warning that Zecke's is down.

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -61,7 +61,7 @@ Edit the USB section to look like this:
 
 ==== Unofficial (zecke) Updates ==== 
 
-Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Temporary Repository)
+Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Currently Down--likely no longer needed)
 
  src/gz zecke-all http://people.openmoko.org/~zecke/om2008.8-dev/all
  src/gz zecke-arm http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
