/* FreeRunner known hardware related issues */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -1,8 +1,8 @@
 {{Neo FreeRunner Menu}}
 
-== FreeRunner known hardware related issues ==
+== FreeRunner (GTA02): known hardware-related issues ==
 
-There is collection of FreeRunner hardware issue wiki page [[Freerunner_Hardware_Issues]] , could help you quickly know if you bump into same problem and the possible way to solve some of issues.
+There is a collection of known FreeRunner hardware issues at the wiki page [[Freerunner_Hardware_Issues]]; reading that page could help you quickly solve those issues.
 
 ==Booting==
 '''Q: I can't boot Neo with charger?'''  
