--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -43,7 +43,7 @@ To get the u-boot menu:
 
 Also see the wiki pages/sections:
 * [[Booting the Neo FreeRunner]]
-* [[Device Firmware Upgrade]]
+* The '''Device Firmware Upgrade''' section in the [[Bootloader]] page
 * [[Flashing the Neo Freerunner]]
 * [[Dfu-util]]
 
