--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -48,6 +48,10 @@ or
   grep  Bootloader /dev/mtdblock1  (yields the NAND u-boot version)
 |}
 
+<!-- added dummy empty table to add spacing before next header -->
+{| border="0" cellspacing="0" cellpadding="5" align="left"
+|&nbsp;
+}
 
 === Q: I'm unable to flash FreeRunner after booting either into NAND or NOR. ===
 
