--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -48,10 +48,10 @@ or
   grep  Bootloader /dev/mtdblock1  (yields the NAND u-boot version)
 |}
 
-<!-- added dummy empty table to add spacing before next header -->
+<!-- added dummy empty table to add spacing before next header, otherwise overruns it very annoyingly -->
 {| border="0" cellspacing="0" cellpadding="5" align="left"
 |&nbsp;
-}
+|}
 
 === Q: I'm unable to flash FreeRunner after booting either into NAND or NOR. ===
 
