/* Q: How do I find out what image versions are in use on the phone? */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -27,7 +27,8 @@ Notes:
 === Q: How do I find out what image versions are in use on the phone? ===
 
 '''A:''' You can run the commands given below on the phone (in an SSH session from your host PC, or in the Terminal application on the phone itself)
-{| border="1" cellspacing="0" cellpadding="5" align="left"
+<p>
+{| border="1" cellspacing="0" cellpadding="5" align="left" width="80%"
 ! To find out
 ! Run
 |- 
@@ -47,11 +48,7 @@ or
 or
   grep  Bootloader /dev/mtdblock1  (yields the NAND u-boot version)
 |}
-
-<!-- added dummy empty table to add spacing before next header, otherwise overruns it very annoyingly -->
-{| border="0" cellspacing="0" cellpadding="5" align="left"
-|&nbsp;
-|}
+</p>
 
 === Q: I'm unable to flash FreeRunner after booting either into NAND or NOR. ===
 
