/* Q: I'm unable to flash FreeRunner after booting either into NAND or NOR. */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -68,7 +68,7 @@ To get the u-boot menu:
 
 Also see the wiki pages/sections:
 * [[Booting the Neo FreeRunner]]
-* The '''Device Firmware Upgrade''' section in the [[Bootloader]] page
+* [[Bootloader#Device Firmware Upgrade]]
 * [[Flashing the Neo Freerunner]]
 * [[Dfu-util]]
 
