--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -5,7 +5,7 @@
 There is a collection of known FreeRunner hardware issues at the wiki page [[Freerunner_Hardware_Issues]]; reading that page could help you quickly solve those issues.
 
 ==Booting==
-=== Q: Why won't the FreeRunner boot even with the charger connected? ===
+=== Why won't the FreeRunner boot even with the charger connected? ===
 
 '''A:'''
 Early builds of the FreeRunner<sup>1</sup> have the issue that the phone needs to boot fully to enable charging of the battery. However, current supplied via the charger is not sufficient to boot the phone; some power is required from the battery as well<sup>2</sup>. If you've let your battery discharge totally, the only recommended<sup>3</sup> way to boot the FreeRunner is with a spare battery. If you don't have a spare battery specifically for the FreeRunner, you can also use a Nokia battery (see [[Neo FreeRunner Battery]] for a list of compatible batteries). 
@@ -24,7 +24,7 @@ Notes:
 
 *<sup>3</sup> Andy Green mentions possible alternate approaches at http://n2.nabble.com/Dead-battery-tp735397p735419.html and http://n2.nabble.com/FreeRunner-is-completely-dead-tp683923p684209.html - '''these are entirely at your risk and are NOT recommended!'''
 
-=== Q: How do I find out what image versions are in use on the phone? ===
+=== How do I find out what image versions are in use on the phone? ===
 
 '''A:''' You can run the commands given below on the phone (in an SSH session from your host PC, or in the Terminal application on the phone itself)
 {| border="1" cellspacing="0" cellpadding="5" align="left"
@@ -50,11 +50,11 @@ or
 
 &nbsp;
 
-=== Q: I'm unable to flash FreeRunner after booting either into NAND or NOR. ===
+=== I'm unable to flash FreeRunner after booting either into NAND or NOR. ===
 
 '''A:''' {{note|Please check [[Getting_Started_with_your_Neo_FreeRunner]] for more information about flashing new images to your phone.}}
  
-'''Q: I can ssh into the phone via USB per the wiki instructions, but dfu-util does not find the phone. '''
+=== I can SSH into the phone via USB as per the wiki instructions, but dfu-util does not find the phone. ===
 
 '''A:''' In brief, you need to restart (or power on) the phone to get to the NOR u-boot menu before dfu-util will be able to connect. dfu-util uses the USB DFU (Universal Serial Bus Device Firmware Upgrade) protocol, which is only available at the u-boot menu, and '''not''' Ethernet over USB, which is what is available when the phone has booted fully. 
 
