--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -108,11 +108,11 @@ See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and mor
 See [[Forcing fast charge mode]].
 
 == USB ==
-=== How do I connect an USB memory-stick etc? ===
+=== How do I connect a USB memory-stick etc? ===
 
 '''A:''' This requires an adapter Mini-B 5-pole => Type A jack or an adapter jack => jack. See [[Host Mode]] for more information.
 
-'''Q:''' Once I have such an adapter, can I use it to connect 2 Neos to each other?
+=== Q:''' Once I have such an adapter, can I use it to connect 2 Neos to each other?
 
 '''A:''' This question is equivalent to '''How to connect two [Unix/Linux] computers via USB cable and what sort of special cable is needed?''' -> http://www.linuxquestions.org/questions/linux-general-1/connecting-two-computers-with-a-usb-cable-data-cable-411073
 <br >
