--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -142,11 +142,11 @@ Following page contain very useful information:
 
 == GPS ==
 
-'''Q: How do I get the GPS working?''' 
+=== Q: How do I get the GPS working? ===
 
 '''A: '''See [[GTA02 GPS]]
 
-'''Q''': it takes a long time (10min+) before the Freerunner gets first GPS data 
+=== It takes a long time (10min+) before the Freerunner gets the first GPS data/readings ===
 
 '''A: '''See [[GPS Problems]].
 
