--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -142,7 +142,7 @@ Following page contain very useful information:
 
 == GPS ==
 
-=== Q: How do I get the GPS working? ===
+=== How do I get the GPS working? ===
 
 '''A: '''See [[GTA02 GPS]]
 
