/* It takes a long time (10min+) before the Freerunner gets the first GPS data/readings */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -146,7 +146,7 @@ Following page contain very useful information:
 
 '''A: '''See [[GTA02 GPS]]
 
-=== It takes a long time (10min+) before the Freerunner gets the first GPS data/readings ===
+=== It takes a long time (10min+) before the FreeRunner gets the first GPS data/readings ===
 
 '''A: '''See [[GPS Problems]].
 
