--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -152,7 +152,7 @@ Following page contain very useful information:
 
 == Wi-Fi ==
 
-=== How do I get the wlan working? ===
+=== How do I get the WLAN working? ===
 
 '''A: ''' See [[GTA02 WLAN]]
 
