--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -158,7 +158,7 @@ Following page contain very useful information:
 
 == Bluetooth ==
 
-'''Q: How do I get the Bluetooth working? '''
+=== How do I get Bluetooth working manually? ===
 
 '''A: ''' See [[Manually_using_Bluetooth]]
 
