--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -162,9 +162,9 @@ Following page contain very useful information:
 
 '''A: ''' See [[Manually_using_Bluetooth]]
 
-== Sysfs function==
+== Sysfs functions/functionality==
 
-'''Q: How do I get low level hardware related function, like power up device, dump register? '''
+=== How do I get low level hardware related function, like power up device, dump register? ===
 
 '''A: ''' See [[GTA02_sysfs]]
 
