--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -183,9 +183,9 @@ Look [http://wiki.openmoko.org/wiki/Today/2007.2#Adjust_UI_components_at_runtime
 === Does it support Java? ===
 There is a [https://wiki.evolvis.org/jalimo/index.php/Openmoko port of Jalimo] for Openmoko.
 
-=== Does it support Flash? So can I watch YouTube? ===
+=== Does it support Flash so can I watch YouTube? ===
 
-=== Does it support Ruby ===
+=== Does it support Ruby? ===
 
 Ruby 1.9 please refer http://blog.sparkymat.net/2008/08/10/ruby-19-on-openmoko/
 Ruby 1.8.6 please refer http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-on-openmoko-freerunner
@@ -194,19 +194,6 @@ Ruby 1.8.6 please refer http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-o
 
 See [[Switching Keyboards]]
 
-=== How do I get a qwerty software keyboard?===
+=== How do I get a QWERTY layout software keyboard?===
 
 See [[Switching Keyboards]]
-
-===How to use an external USB or Bluetooth keyboard with the FreeRunner ? ===
-
-just run:
- echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
- echo "1" > /sys/devices/platform/neo1973-pm-host.0/hostmode
-
-This'll put the Freerunner in to powered USB host mode, then just plug in the keyboard and it'll work. Personally I've made a .desktop file to switch into and out of host mode. To switch back to unpowered device mode just run:
-
- echo "device" > /sys/devices/platform/s3c2410-ohci/usb_mode
- echo "0" > /sys/devices/platform/neo1973-pm-host.0/hostmode
-
-[[Category:Neo FreeRunner Hardware]]
