--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -118,6 +118,23 @@ See [[Forcing fast charge mode]].
 <br >
 It should work if one Neo is set to Host mode and the other one set to Device mode. One Neo could give power to the USB-port it the other Neo's battery is low. ''(I have to verify this)''
 
+===How do I use an external USB or Bluetooth keyboard with the FreeRunner ? ===
+
+{{Note| These commands appear to be for USB only? Could someone please supply the commands for using a Bluetooth keyboard? --[[User:Eddsouza|eddsouza]] 08:21, 31 August 2008 (UTC)}}
+
+Run:
+ echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
+ echo "1" > /sys/devices/platform/neo1973-pm-host.0/hostmode
+
+These commands will put the Freerunner into powered USB host mode. After this, just plug in the keyboard and it'll work. Personally, I've made a .desktop file to switch into and out of host mode. 
+
+To switch back to unpowered device mode just run:
+
+ echo "device" > /sys/devices/platform/s3c2410-ohci/usb_mode
+ echo "0" > /sys/devices/platform/neo1973-pm-host.0/hostmode
+
+[[Category:Neo FreeRunner Hardware]]
+
 == GSM ==
 
 === SIM compatibility ===
