--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -112,7 +112,7 @@ See [[Forcing fast charge mode]].
 
 '''A:''' This requires an adapter Mini-B 5-pole => Type A jack or an adapter jack => jack. See [[Host Mode]] for more information.
 
-=== Q:''' Once I have such an adapter, can I use it to connect 2 Neos to each other?
+Q:''' Once I have such an adapter, can I use it to connect 2 Neos to each other?
 
 '''A:''' This question is equivalent to '''How to connect two [Unix/Linux] computers via USB cable and what sort of special cable is needed?''' -> http://www.linuxquestions.org/questions/linux-general-1/connecting-two-computers-with-a-usb-cable-data-cable-411073
 <br >
