--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -74,7 +74,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 ===<font color=white>Integration and distributions</font>===
 * [[OpenEmbedded|The OpenEmbedded distribution building framework]]
 * [[MokoMakefile|Building Openmoko using the MokoMakefile ]]
-* [[Opkg|Opkg the package manager]]
+* [[Opkg|The Opkg package manager]]
 
 ===<font color=white>Emulation</font>===
 * [[Openmoko under QEMU]] 
