--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -137,17 +137,16 @@ To switch back to unpowered device mode just run:
 
 == GSM ==
 
-=== SIM compatibility ===
-'''Q:'''Sim card is not working, how do I run diagnostics?
+=== SIM compatibility: It looks like my SIM card is not working; how do I run diagnostics? ===
 
 '''A:'''
-Here is the "how to" check.
+Here is how to check: follow [[Manually_using_GSM]] until you get an OK prompt. 
 
-Follow [[Manually_using_GSM]] until you get an OK prompt. More detalied documenation please refer [[FreeRunner_unable_to_work_with_3G_SIM_cards]] and [[Carriers]].
+For more detailed documentation, please refer to [[FreeRunner_unable_to_work_with_3G_SIM_cards]] and [[Carriers]].
 
 === GSM/GPRS information ===
 
-Following page contain very useful information:
+The following pages contain very useful information:
 
 * [http://wiki.openmoko.org/wiki/Gsmd GSM Daemon]
 
