--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -203,8 +203,9 @@ There is a [https://wiki.evolvis.org/jalimo/index.php/Openmoko port of Jalimo] f
 
 === Does it support Ruby? ===
 
-Ruby 1.9 please refer http://blog.sparkymat.net/2008/08/10/ruby-19-on-openmoko/
-Ruby 1.8.6 please refer http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-on-openmoko-freerunner
+For Ruby 1.9, please refer to http://blog.sparkymat.net/2008/08/10/ruby-19-on-openmoko/
+
+For Ruby 1.8.6, please refer to http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-on-openmoko-freerunner
 
 === How can I type a '/' in the software keyboard? ===
 
