Make distributions a category and move applications in Getting started (ugh :-(

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -47,15 +47,12 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 <td>
 ===<font color=white>Getting started</font>===
 * [[Getting Started with your Neo FreeRunner | Neo FreeRunner getting started guide]]
-
-===<font color=white>Software</font>===
 * [[Applications]]
-* [[Distributions|Openmoko software distributions]]
-** [[Om 2007.2|2007.2 distribution]]
-** [[Om 2008.8|2008.8 distribution]]
-** [[OpenmokoFramework|FSO distribution]]
-** [[Qtopia_on_FreeRunner|Qtopia distribution]]
-** [[Debian|Debian distribution]]
+
+===<font color=white>Distributions</font>===
+* [[Distributions|Features comparison table]]
+* [[Om 2008.8|Om 2008.8 (ASU)]] - [[Om 2007.2|Om 2007.2 (old stable)]]
+* [[OpenmokoFramework|FSO]] - [[Qtopia_on_FreeRunner|Qtopia]] - [[Debian|Debian]]
 
 ===<font color=white>Openmoko community</font>===
 * [[Discussion_Forums| Discussion Forums]]
