--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -58,7 +58,9 @@ See [[SHR Development]] to find out how to set up your development environment t
 Hang out in #openmoko-cdevel on chat.freenode.net between 5pm and 11pm GMT to chat with the people developing SHR.  (Primarily MarcOChapeau and Ainulindale.)
 
 == Tasks & status ==
-Here's a list of the tasks for the SHR:
+
+The list of tasks is available in the [http://docs.openmoko.org/trac/milestone/SHR SHR Milestone] page. Some information is missing (e.g. task owner) this is why the table below is still valid.
+
 {|cellpadding="6" cellspacing="0" border="1" width="600"
 |+
 |Task
