--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -222,7 +222,7 @@ Statuses:
 
 == Technical Help ==
 
-=== SVN ===
+=== Getting the source code ===
 
 We're currently hosted by [[User:Ainulindale|Ainulindale]] on svn://daria.forty-two.fr/shr as projects went down for a whole week-end.
 
