/* Getting the source code */

--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -226,6 +226,8 @@ Statuses:
 
 We're currently hosted by [[User:Ainulindale|Ainulindale]] on svn://daria.forty-two.fr/shr as projects went down for a whole week-end.
 
+There is no need to download the code independently as it is automatically obtained when setting the development environment described in [[SHR Development]].
+
 === Build logic ===
 
 Current applications (dialer3 and openmoko-panel-gsm) use frameworkd.
