--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -230,7 +230,7 @@ There is no need to download the code independently as it is automatically obtai
 
 === Build logic ===
 
-Current applications (dialer3 and openmoko-panel-gsm) use frameworkd.
+Current applications (openmoko-dialer3 and openmoko-panel-gsm) use frameworkd.
 So in order to be able to build and test these applications, you have to build frameworkd (MS2) and gsm0710muxd.
 
 === [[libframeworkd-glib]] ===
