--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -55,7 +55,7 @@ See the Developer Info on the upper right side of the [http://projects.openmoko.
 
 == Tasks & status ==
 
-The list of tasks is available in the [http://docs.openmoko.org/trac/milestone/SHR SHR Milestone] page. Some information is missing (e.g. task owner) this is why the table below is still valid.
+The list of tasks is available at the [http://docs.openmoko.org/trac/milestone/SHR SHR Milestone] page. Some information is missing (e.g. task owner) this is why the table below is still valid.
 
 {|cellpadding="6" cellspacing="0" border="1" width="600"
 |+
