/* Option 2: With GSM multiplexing and without a GUI */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -32,6 +32,8 @@ Then, hopefully, you should be up in running with GPRS and a GUI to turn it on a
 
 = Option 2: With GSM multiplexing and without a GUI =
 
+You will have to get gsm0710muxd the same way as detailed in Option 1.
+
 '''1) In /etc/rc5.d start gsm0710muxd before gsmd:'''
 * S34gsm0710muxd -> ../init.d/gsm0710muxd
 * S35gsmd -> ../init.d/gsmd
