/* How to join */

--- a/Stable_Hybrid_Release.mw
+++ b/Stable_Hybrid_Release.mw
@@ -50,7 +50,7 @@ See the Developer Info on the upper right side of the [http://projects.openmoko.
 == How to join ==
 * Send a request to join on the [http://projects.openmoko.org/projects/shr SHR project] on the OM projects page.
 * Join [http://lists.projects.openmoko.org/mailman/listinfo/shr-devel shr-devel@lists.projects.openmoko.org] and send an introductory email. The introductory email can just be a couple of lines if you like.  It should include what part would you want to work on, and any special knowledge you have that would relate to the project, e.g. if you are an OE guru or linux kernel geek, matchbox-window manager guru, etc.
-* Hang out in #openmoko-cdevel on chat.freenode.net between 5pm and 11pm GMT to chat with the people developing SHR.  (Primarily MarcOChapeau and Ainulindale.)
+* Hang out in ''#openmoko-cdevel'' on ''irc.freenode.net'' between 5pm and 11pm GMT to chat with the people developing SHR.  (Primarily MarcOChapeau and Ainulindale.)
 * See [[SHR Development]] to find out how to set up your development environment to work on existing SHR packages.
 
 == Tasks & status ==
