Fixed link (Latest images->Download)

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -23,7 +23,7 @@ Openmoko distributions are designed to run on various mobile devices, with the p
 
 While the Openmoko distributions will run on [[Supported devices|other mobile devices]] too, some other software distributions will also run on the Openmoko Inc. phones (see below). 
 
-For downloads see [[Latest Images]], for installation instructions see [[Flashing the Neo FreeRunner]].
+For downloads see [[Download]], for installation instructions see [[Flashing the Neo FreeRunner]].
 
 == About distributions ==
 
