/* Connectivity */ {{Yes}} template instead html coding.

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -100,19 +100,19 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| Telephony || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| Telephony || {{Yes}} || {{Yes}} || {{Yes}} || N/A || {{Yes}} || {{Yes}} (1)
 |-
-| SMS || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| SMS || {{Yes}} || {{Yes}} || {{Yes}} || N/A || {{Yes}} || {{Yes}} (1)
 |-
-| [[GPRS]] || Not through UI || Not through UI || Not through UI || N/A || No (3) || style="background:lightgreen;" | Yes (1)
+| [[GPRS]] || Not through UI || Not through UI || Not through UI || N/A || {{No}} (3) || {{Yes}} (1)
 |-
-| WiFi || style="background:lightgreen;" | Yes || Not through UI || style="background:lightgreen;" | Yes (*) || N/A || style="background:lightgreen;" | Yes ||style="background:lightgreen;" | Yes
+| WiFi || {{Yes}} || Not through UI || {{Yes}} (*) || N/A || {{Yes}} || {{Yes}}
 |-
-| VoIP || ?? || ?? || ?? || ?? || ?? || style="background:lightgreen;" | Yes
+| VoIP || ?? || ?? || ?? || ?? || ?? || {{Yes}}
 |-
-| Bluetooth || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Bluetooth || {{Yes}} || {{No}} || {{Yes}} || N/A || {{Yes}} || {{Yes}}
 |-
-| GPS || style="background:lightgreen;" | Yes (1) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || No || style="background:lightgreen;" | Yes (1)
+| GPS || {{Yes}} (1) || {{Yes}} || {{Yes}} (1) || N/A || {{No}} || {{Yes}} (1)
 |-
 |}
 
